@@ -24,11 +24,12 @@
 
 package io.jenkins.docker.pipeline;
 
-import com.google.common.collect.ImmutableSet;
+import static org.junit.Assert.assertEquals;
+
 import com.nirima.jenkins.plugins.docker.DockerCloud;
 import com.nirima.jenkins.plugins.docker.DockerContainerWatchdog;
 import com.nirima.jenkins.plugins.docker.TestableDockerContainerWatchdog;
-
+import edu.umd.cs.findbugs.annotations.NonNull;
 import hudson.FilePath;
 import hudson.model.Descriptor;
 import hudson.model.DownloadService;
@@ -42,8 +43,18 @@ import hudson.tools.InstallSourceProperty;
 import io.jenkins.docker.client.DockerAPI;
 import io.jenkins.docker.connector.DockerComputerAttachConnector;
 import io.jenkins.docker.connector.DockerComputerConnector;
+import java.time.Clock;
+import java.time.Duration;
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.List;
+import java.util.Map;
+import java.util.Set;
 import jenkins.model.Jenkins;
 import org.apache.commons.lang3.SystemUtils;
+import org.jenkinsci.plugins.docker.commons.credentials.DockerServerEndpoint;
+import org.jenkinsci.plugins.structs.describable.DescribableModel;
+import org.jenkinsci.plugins.structs.describable.UninstantiatedDescribable;
 import org.jenkinsci.plugins.workflow.cps.CpsFlowDefinition;
 import org.jenkinsci.plugins.workflow.job.WorkflowJob;
 import org.jenkinsci.plugins.workflow.job.WorkflowRun;
@@ -54,9 +65,8 @@ import org.jenkinsci.plugins.workflow.steps.Step;
 import org.jenkinsci.plugins.workflow.steps.StepContext;
 import org.jenkinsci.plugins.workflow.steps.StepDescriptor;
 import org.jenkinsci.plugins.workflow.steps.StepExecution;
-import static org.junit.Assert.*;
 import org.junit.Assume;
-import org.junit.Before;
+import org.junit.BeforeClass;
 import org.junit.ClassRule;
 import org.junit.Rule;
 import org.junit.Test;
@@ -68,23 +78,10 @@ import org.jvnet.hudson.test.RestartableJenkinsRule;
 import org.jvnet.hudson.test.TestExtension;
 import org.kohsuke.stapler.DataBoundConstructor;
 
-import javax.annotation.Nonnull;
-
-import java.time.Clock;
-import java.time.Duration;
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.List;
-import java.util.Map;
-import java.util.Set;
-import org.jenkinsci.plugins.docker.commons.credentials.DockerServerEndpoint;
-import org.jenkinsci.plugins.structs.describable.DescribableModel;
-import org.jenkinsci.plugins.structs.describable.UninstantiatedDescribable;
-
 public class DockerNodeStepTest {
 
-    @Before
-    public void before() {
+    @BeforeClass
+    public static void before() {
         // FIXME on CI windows nodes don't have Docker4Windows
         Assume.assumeFalse(SystemUtils.IS_OS_WINDOWS);
     }
@@ -102,8 +99,8 @@ public class DockerNodeStepTest {
         return dockerNode(dockerHostUri, dockerImage, remoteFsInImage);
     }
 
-    private static String dockerNode(final String dockerHostUri, final String dockerImage,
-            final String remoteFsInImage) {
+    private static String dockerNode(
+            final String dockerHostUri, final String dockerImage, final String remoteFsInImage) {
         final StringBuilder s = new StringBuilder();
         s.append("dockerNode(");
         s.append("connector: attach(jvmArgsString: '-Xmx250m')");
@@ -139,7 +136,8 @@ public class DockerNodeStepTest {
                 jenkins.removeNode(node);
             }
             // now trigger the docker cleanup, telling it it's long overdue.
-            final DockerContainerWatchdog cleaner = jenkins.getExtensionList(DockerContainerWatchdog.class).get(0);
+            final DockerContainerWatchdog cleaner =
+                    jenkins.getExtensionList(DockerContainerWatchdog.class).get(0);
             final String cleanerThreadName = cleaner.name;
             final Clock now = Clock.systemUTC();
             final Clock future = Clock.offset(now, Duration.ofMinutes(60));
@@ -184,9 +182,8 @@ public class DockerNodeStepTest {
 
             private void runTest() throws Throwable {
                 WorkflowJob j = story.j.jenkins.createProject(WorkflowJob.class, "simpleProvision");
-                j.setDefinition(new CpsFlowDefinition(dockerNodeJenkinsAgent() + " {\n" +
-                        "  sh 'echo \"hello there\"'\n" +
-                        "}\n", true));
+                j.setDefinition(new CpsFlowDefinition(
+                        dockerNodeJenkinsAgent() + " {\n" + "  sh 'echo \"hello there\"'\n" + "}\n", true));
                 WorkflowRun r = story.j.buildAndAssertSuccess(j);
                 story.j.assertLogContains("hello there", r);
             }
@@ -207,11 +204,12 @@ public class DockerNodeStepTest {
 
             private void runTest() throws Throwable {
                 WorkflowJob j = story.j.jenkins.createProject(WorkflowJob.class, "withinNode");
-                j.setDefinition(new CpsFlowDefinition("node {\n" +
-                        "  " + dockerNodeJenkinsAgent() + " {\n" +
-                        "    sh 'echo \"hello there\"'\n" +
-                        "  }\n" +
-                        "}\n", true));
+                j.setDefinition(new CpsFlowDefinition(
+                        "node {\n" + "  "
+                                + dockerNodeJenkinsAgent() + " {\n" + "    sh 'echo \"hello there\"'\n"
+                                + "  }\n"
+                                + "}\n",
+                        true));
                 WorkflowRun r = story.j.buildAndAssertSuccess(j);
                 story.j.assertLogContains("hello there", r);
             }
@@ -232,21 +230,27 @@ public class DockerNodeStepTest {
             }
 
             private void runTest() throws Throwable {
-                // I feel like there's a way to do this without downloading the JSON, but at the moment I can't figure it out.
-                DownloadService.Downloadable mvnDl = DownloadService.Downloadable.get("hudson.tasks.Maven.MavenInstaller");
+                // I feel like there's a way to do this without downloading the JSON, but at the moment I can't figure
+                // it out.
+                DownloadService.Downloadable mvnDl =
+                        DownloadService.Downloadable.get("hudson.tasks.Maven.MavenInstaller");
                 mvnDl.updateNow();
-                DownloadFromUrlInstaller.Installable ins = story.j.get(Maven.MavenInstaller.DescriptorImpl.class).getInstallables().get(0);
+                DownloadFromUrlInstaller.Installable ins = story.j
+                        .get(Maven.MavenInstaller.DescriptorImpl.class)
+                        .getInstallables()
+                        .get(0);
                 Maven.MavenInstaller installer = new Maven.MavenInstaller(ins.id);
 
-                InstallSourceProperty mvnIsp = new InstallSourceProperty(Collections.singletonList(installer));
+                InstallSourceProperty mvnIsp = new InstallSourceProperty(List.of(installer));
 
-                Maven.MavenInstallation mvnInst = new Maven.MavenInstallation("myMaven", null, Collections.singletonList(mvnIsp));
+                Maven.MavenInstallation mvnInst = new Maven.MavenInstallation("myMaven", null, List.of(mvnIsp));
                 story.j.jenkins.getDescriptorByType(Maven.DescriptorImpl.class).setInstallations(mvnInst);
                 WorkflowJob j = story.j.jenkins.createProject(WorkflowJob.class, "toolInstall");
-                j.setDefinition(new CpsFlowDefinition(dockerNodeJenkinsAgent() + " {\n" +
-                        "  def mvnHome = tool name: 'myMaven'\n" +
-                        "  assert fileExists(mvnHome + '/bin/mvn')\n" +
-                        "}\n", true));
+                j.setDefinition(new CpsFlowDefinition(
+                        dockerNodeJenkinsAgent() + " {\n" + "  def mvnHome = tool name: 'myMaven'\n"
+                                + "  assert fileExists(mvnHome + '/bin/mvn')\n"
+                                + "}\n",
+                        true));
                 story.j.buildAndAssertSuccess(j);
             }
         });
@@ -267,12 +271,13 @@ public class DockerNodeStepTest {
 
             private void runTest() throws Throwable {
                 WorkflowJob j = story.j.jenkins.createProject(WorkflowJob.class, "changeDir");
-                j.setDefinition(new CpsFlowDefinition(dockerNodeJenkinsAgent() + " {\n" +
-                        "  echo \"dir is '${pwd()}'\"\n" +
-                        "  dir('subdir') {\n" +
-                        "    echo \"dir now is '${pwd()}'\"\n" +
-                        "  }\n" +
-                        "}\n", true));
+                j.setDefinition(new CpsFlowDefinition(
+                        dockerNodeJenkinsAgent() + " {\n" + "  echo \"dir is '${pwd()}'\"\n"
+                                + "  dir('subdir') {\n"
+                                + "    echo \"dir now is '${pwd()}'\"\n"
+                                + "  }\n"
+                                + "}\n",
+                        true));
                 WorkflowRun r = story.j.buildAndAssertSuccess(j);
                 story.j.assertLogContains("dir is '/home/jenkins/workspace'", r);
                 story.j.assertLogContains("dir now is '/home/jenkins/workspace/subdir'", r);
@@ -295,15 +300,16 @@ public class DockerNodeStepTest {
 
             private void runTest() throws Throwable {
                 WorkflowJob j = story.j.jenkins.createProject(WorkflowJob.class, "deleteDir");
-                j.setDefinition(new CpsFlowDefinition(dockerNodeJenkinsAgent() + " {\n" +
-                        "  sh 'mkdir -p subdir'\n" +
-                        "  assert fileExists('subdir')\n" +
-                        "  dir('subdir') {\n" +
-                        "    echo \"dir now is '${pwd()}'\"\n" +
-                        "    deleteDir()\n" +
-                        "  }\n" +
-                        "  assert !fileExists('subdir')\n" +
-                        "}\n", true));
+                j.setDefinition(new CpsFlowDefinition(
+                        dockerNodeJenkinsAgent() + " {\n" + "  sh 'mkdir -p subdir'\n"
+                                + "  assert fileExists('subdir')\n"
+                                + "  dir('subdir') {\n"
+                                + "    echo \"dir now is '${pwd()}'\"\n"
+                                + "    deleteDir()\n"
+                                + "  }\n"
+                                + "  assert !fileExists('subdir')\n"
+                                + "}\n",
+                        true));
                 WorkflowRun r = story.j.buildAndAssertSuccess(j);
                 story.j.assertLogContains("dir now is '/home/jenkins/workspace/subdir'", r);
             }
@@ -327,25 +333,31 @@ public class DockerNodeStepTest {
                 Slave s1 = story.j.createOnlineSlave();
                 s1.setLabelString("first-agent");
                 s1.setMode(Node.Mode.EXCLUSIVE);
-                s1.getNodeProperties().add(new EnvironmentVariablesNodeProperty(new EnvironmentVariablesNodeProperty.Entry("ONAGENT", "true"),
-                        new EnvironmentVariablesNodeProperty.Entry("WHICH_AGENT", "first")));
+                s1.getNodeProperties()
+                        .add(new EnvironmentVariablesNodeProperty(
+                                new EnvironmentVariablesNodeProperty.Entry("ONAGENT", "true"),
+                                new EnvironmentVariablesNodeProperty.Entry("WHICH_AGENT", "first")));
 
                 Slave s2 = story.j.createOnlineSlave();
                 s2.setLabelString("other-agent");
                 s2.setMode(Node.Mode.EXCLUSIVE);
-                s2.getNodeProperties().add(new EnvironmentVariablesNodeProperty(new EnvironmentVariablesNodeProperty.Entry("ONAGENT", "true"),
-                        new EnvironmentVariablesNodeProperty.Entry("WHICH_AGENT", "second")));
+                s2.getNodeProperties()
+                        .add(new EnvironmentVariablesNodeProperty(
+                                new EnvironmentVariablesNodeProperty.Entry("ONAGENT", "true"),
+                                new EnvironmentVariablesNodeProperty.Entry("WHICH_AGENT", "second")));
 
                 WorkflowJob j = story.j.jenkins.createProject(WorkflowJob.class, "nodeWithinDockerNode");
-                j.setDefinition(new CpsFlowDefinition("node('first-agent') {\n" +
-                        "  sh 'echo \"FIRST: WHICH_AGENT=|$WHICH_AGENT|\"'\n" +
-                        "  " + dockerNodeJenkinsAgent() + " {\n" +
-                        "    sh 'echo \"DOCKER: WHICH_AGENT=|$WHICH_AGENT|\"'\n" +
-                        "    node('other-agent') {\n" +
-                        "      sh 'echo \"SECOND: WHICH_AGENT=|$WHICH_AGENT|\"'\n" +
-                        "    }\n" +
-                        "  }\n" +
-                        "}\n", true));
+                j.setDefinition(new CpsFlowDefinition(
+                        "node('first-agent') {\n" + "  sh 'echo \"FIRST: WHICH_AGENT=|$WHICH_AGENT|\"'\n"
+                                + "  "
+                                + dockerNodeJenkinsAgent() + " {\n"
+                                + "    sh 'echo \"DOCKER: WHICH_AGENT=|$WHICH_AGENT|\"'\n"
+                                + "    node('other-agent') {\n"
+                                + "      sh 'echo \"SECOND: WHICH_AGENT=|$WHICH_AGENT|\"'\n"
+                                + "    }\n"
+                                + "  }\n"
+                                + "}\n",
+                        true));
                 WorkflowRun r = story.j.buildAndAssertSuccess(j);
                 story.j.assertLogContains("FIRST: WHICH_AGENT=|first|", r);
                 story.j.assertLogContains("SECOND: WHICH_AGENT=|second|", r);
@@ -362,13 +374,20 @@ public class DockerNodeStepTest {
             s.setDockerHost("");
             s.setRemoteFs("");
             UninstantiatedDescribable uninstantiated = new DescribableModel<>(DockerNodeStep.class).uninstantiate2(s);
-            assertEquals(uninstantiated.toString(), Collections.singleton("image"), uninstantiated.getArguments().keySet());
-            r.jenkins.clouds.add(new DockerCloud("whatever", new DockerAPI(new DockerServerEndpoint("unix:///var/run/docker.sock", null)), Collections.emptyList()));
+            assertEquals(
+                    uninstantiated.toString(),
+                    Set.of("image"),
+                    uninstantiated.getArguments().keySet());
+            r.jenkins.clouds.add(new DockerCloud(
+                    "whatever",
+                    new DockerAPI(new DockerServerEndpoint("unix:///var/run/docker.sock", null)),
+                    Collections.emptyList()));
             WorkflowJob j = r.createProject(WorkflowJob.class, "p");
             j.setDefinition(new CpsFlowDefinition(
-                dockerNodeWithImage("openjdk:8") + " {\n" +
-                "  sh 'java -version && whoami && pwd && touch stuff && ls -lat . ..'\n" +
-                "}\n", true));
+                    dockerNodeWithImage("openjdk:11") + " {\n"
+                            + "  sh 'java -version && whoami && pwd && touch stuff && ls -lat . ..'\n"
+                            + "}\n",
+                    true));
             r.buildAndAssertSuccess(j);
         });
     }
@@ -388,14 +407,15 @@ public class DockerNodeStepTest {
 
             private void runTest() throws Throwable {
                 WorkflowJob j = story.j.jenkins.createProject(WorkflowJob.class, "pathModification");
-                j.setDefinition(new CpsFlowDefinition(dockerNodeJenkinsAgent() + " {\n" +
-                        "  echo \"Original PATH: ${env.PATH}\"\n" +
-                        "  def origPath = env.PATH\n" +
-                        "  pathModifier('/some/fake/path') {\n" +
-                        "    echo \"Modified PATH: ${env.PATH}\"\n" +
-                        "    assert env.PATH == '/some/fake/path:' + origPath" +
-                        "  }\n" +
-                        "}\n", true));
+                j.setDefinition(new CpsFlowDefinition(
+                        dockerNodeJenkinsAgent() + " {\n" + "  echo \"Original PATH: ${env.PATH}\"\n"
+                                + "  def origPath = env.PATH\n"
+                                + "  pathModifier('/some/fake/path') {\n"
+                                + "    echo \"Modified PATH: ${env.PATH}\"\n"
+                                + "    assert env.PATH == '/some/fake/path:' + origPath"
+                                + "  }\n"
+                                + "}\n",
+                        true));
                 story.j.buildAndAssertSuccess(j);
             }
         });
@@ -415,10 +435,12 @@ public class DockerNodeStepTest {
 
             private void runTest() throws Throwable {
                 WorkflowJob j = story.j.jenkins.createProject(WorkflowJob.class, "dockerBuilderPublisher");
-                j.setDefinition(new CpsFlowDefinition(dockerNodeJenkinsAgent() + " {\n" +
-                        "  writeFile(file: 'Dockerfile', text: 'FROM jenkins/agent')\n" +
-                        "  step([$class: 'DockerBuilderPublisher', dockerFileDirectory: ''])\n" +
-                        "}\n", true));
+                j.setDefinition(new CpsFlowDefinition(
+                        dockerNodeJenkinsAgent() + " {\n"
+                                + "  writeFile(file: 'Dockerfile', text: 'FROM jenkins/agent')\n"
+                                + "  step([$class: 'DockerBuilderPublisher', dockerFileDirectory: ''])\n"
+                                + "}\n",
+                        true));
                 WorkflowRun r = story.j.buildAndAssertSuccess(j);
                 story.j.assertLogContains("Successfully built", r);
             }
@@ -443,12 +465,14 @@ public class DockerNodeStepTest {
                 final Descriptor ourDesc = jenkins.getDescriptor(DockerNodeStep.class);
                 final Descriptor expectedDesc = jenkins.getDescriptor(DockerComputerAttachConnector.class);
                 final DockerNodeStep.DescriptorImpl ourInstance = (DockerNodeStep.DescriptorImpl) ourDesc;
-                final DockerComputerAttachConnector.DescriptorImpl attachDescriptor = (DockerComputerAttachConnector.DescriptorImpl) expectedDesc;
+                final DockerComputerAttachConnector.DescriptorImpl attachDescriptor =
+                        (DockerComputerAttachConnector.DescriptorImpl) expectedDesc;
                 final List<Descriptor<? extends DockerComputerConnector>> expected = new ArrayList<>();
                 expected.add(attachDescriptor);
 
                 // When
-                final List<Descriptor<? extends DockerComputerConnector>> actual = ourInstance.getAcceptableConnectorDescriptors();
+                final List<Descriptor<? extends DockerComputerConnector>> actual =
+                        ourInstance.getAcceptableConnectorDescriptors();
 
                 // Then
                 assertEquals(expected, actual);
@@ -492,7 +516,7 @@ public class DockerNodeStepTest {
 
             @Override
             public Set<? extends Class<?>> getRequiredContext() {
-                return ImmutableSet.of(TaskListener.class, FilePath.class);
+                return Set.of(TaskListener.class, FilePath.class);
             }
         }
     }
@@ -508,21 +532,25 @@ public class DockerNodeStepTest {
 
         @Override
         public boolean start() throws Exception {
-            EnvironmentExpander envEx = EnvironmentExpander.merge(getContext().get(EnvironmentExpander.class),
-                    EnvironmentExpander.constant(Collections.singletonMap("PATH+MODIFIER", step.getElement())));
+            EnvironmentExpander envEx = EnvironmentExpander.merge(
+                    getContext().get(EnvironmentExpander.class),
+                    EnvironmentExpander.constant(Map.of("PATH+MODIFIER", step.getElement())));
 
-            body = getContext().newBodyInvoker()
+            body = getContext()
+                    .newBodyInvoker()
                     .withContext(envEx)
-                    // Could use a dedicated BodyExecutionCallback here if we wished to print a message at the end ("Returning to ${cwd}"):
+                    // Could use a dedicated BodyExecutionCallback here if we wished to print a message at the end
+                    // ("Returning to ${cwd}"):
                     .withCallback(BodyExecutionCallback.wrap(getContext()))
                     .start();
             return false;
         }
 
         @Override
-        public void stop(@Nonnull Throwable cause) throws Exception {
-            if (body!=null)
+        public void stop(@NonNull Throwable cause) throws Exception {
+            if (body != null) {
                 body.cancel(cause);
+            }
         }
     }
 }
